# Git-Cleaner

./: .gitignore  .graphify_uncached.txt  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: release.yml
.slim/deepwork/: phase3-dev-workflow.md
.superpowers/brainstorm/-1783610394.49273/state/: server-stopped
.superpowers/brainstorm/brainstorm-1783610443.14345/state/: server-stopped
.superpowers/brainstorm/brainstorm-1783610469.94912/content/: sidebar-layouts.html
.superpowers/brainstorm/brainstorm-1783610469.94912/state/: events  server-stopped
docs/adr/: 0001-history-rewrite-with-filter-repo.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
logo/: ascii-banner.py  ascii_banner.py
src/git_cleaner/: __main__.py  app.py  cli.py  config.py  git_ops.py  logo.py  logo_data.py
tests/: test_age_filter.py  test_batch_progress.py  test_branch_compare.py  test_combined_filters.py  test_commit_analysis.py  test_config.py  test_git_ops.py  test_health_indicators.py  test_help_overlay.py  test_pr_integration.py  test_regex_search.py  test_select_by_author.py  test_staleness_colors.py  test_status_badges.py  test_ui_filters.py  test_ui_misc.py  test_undo.py  test_undo_all.py  test_undo_history.py  test_undo_stack.py  test_worktrees.py
