[project]
name = "git-cleaner"
version = "0.1.0"
description = "TUI tool for browsing and bulk-deleting git branches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual"]
authors = [{ name = "git-cleaner" }]

[project.scripts]
git-cleaner = "git_cleaner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
