[project]
name = "git-cleaner-tui"
version = "1.0.3"
description = "TUI tool for browsing and bulk-deleting git branches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "textual-timepiece>=0.7.0",
]
authors = [{ name = "git-cleaner" }]

[project.scripts]
git-cleaner-tui = "git_cleaner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_cleaner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
